--- a/Telstraassignment/app/src/main/res/layout/country_list_item.xml
+++ b/Telstraassignment/app/src/main/res/layout/country_list_item.xml
@@ -16,8 +16,8 @@
         android:layout_width="match_parent"
         android:textStyle="bold"
         android:text="@{countryDetails.title}"
-        android:textSize="@dimen/dp_15"
-        android:layout_margin="@dimen/dp_10"
+        android:textSize="@dimen/sp_15"
+        android:layout_margin="@dimen/sp_10"
         android:textColor="@color/country_title_color"
         android:layout_height="wrap_content" />
 
@@ -25,8 +25,8 @@
         android:id="@+id/txt_description"
         android:layout_width="match_parent"
         android:textStyle="normal"
-        android:textSize="@dimen/dp_10"
-        android:layout_margin="@dimen/dp_10"
+        android:textSize="@dimen/sp_10"
+        android:layout_margin="@dimen/sp_10"
         android:text="@{countryDetails.description}"
         android:layout_below="@+id/txt_title"
         android:layout_toStartOf="@+id/img_content"
@@ -36,12 +36,13 @@
 
         <ImageView
             android:id="@+id/img_content"
-            android:layout_width="@dimen/dp_120"
-            android:layout_height="@dimen/dp_120"
+            android:layout_width="@dimen/sp_120"
+            android:layout_height="@dimen/sp_120"
             android:contentDescription="@string/content_description"
             android:scaleType="centerCrop"
             android:src="@mipmap/ic_launcher"
             android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
             android:layout_below="@+id/txt_title"
             bind:imageUrl="@{countryDetails.imageUrl}" />
         
