--- a/Telstraassignment/app/src/main/res/layout/fragment_country_details.xml
+++ b/Telstraassignment/app/src/main/res/layout/fragment_country_details.xml
@@ -24,15 +24,15 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:maxLines="2"
-            android:layout_marginTop="@dimen/dp_15"
+            android:layout_marginTop="@dimen/sp_15"
             android:textColor="@color/country_description_color"
-            android:textSize="@dimen/dp_15" />
+            android:textSize="@dimen/sp_15" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_country"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="@dimen/dp_10"
+            android:layout_margin="@dimen/sp_10"
             android:visibility="gone"
             android:clipToPadding="false"
             android:contentDescription="@string/content_description" />
