--- a/Telstraassignment/app/src/main/res/layout/tool_bar.xml
+++ b/Telstraassignment/app/src/main/res/layout/tool_bar.xml
@@ -3,9 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
         <variable
             name="apiResponse"
-            type="com.telstraassignmentapp.model.ApiResponse"/>
+            type="com.telstraassignmentapp.model.ApiResponse" />
 
     </data>
 
@@ -15,39 +16,37 @@
         android:layout_height="@dimen/abc_action_bar_default_height_material"
         android:background="@android:color/holo_green_light"
         android:theme="@style/AppTheme"
-        app:elevation="@dimen/dp_10"
+        app:elevation="@dimen/sp_10"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:orientation="horizontal"
-            android:weightSum="1"
-            android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/toolbar_title"
-            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
-            android:layout_width="0dp"
-            android:layout_weight="0.7"
             android:layout_height="wrap_content"
-           android:layout_margin="@dimen/dp_10"
-            android:text="@{apiResponse.title}"
-            android:textColor="@android:color/white" />
+            android:orientation="horizontal"
+            android:weightSum="1">
 
-        <ImageView
-            android:id="@+id/img_notification_bell"
-            android:layout_width="?attr/actionBarSize"
-            android:layout_height="?attr/actionBarSize"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_weight="0.3"
-            android:scaleType="center"
-            android:src="@drawable/img_notification"
-            android:visibility="gone" />
+            <TextView
+                android:id="@+id/toolbar_title"
+                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/sp_10"
+                android:layout_weight="0.7"
+                android:text="@{apiResponse.title}"
+                android:textColor="@android:color/white" />
+
+            <ImageView
+                android:id="@+id/img_notification_bell"
+                android:layout_width="?attr/actionBarSize"
+                android:layout_height="?attr/actionBarSize"
+                android:layout_weight="0.3"
+                android:contentDescription="@string/content_description"
+                android:scaleType="center"
+                android:src="@drawable/img_notification"
+                android:visibility="gone" />
         </LinearLayout>
 
     </androidx.appcompat.widget.Toolbar>
-
 
 
 </layout>
