added instrumentation test case and warnings solved

--- a/Telstraassignment/app/src/main/res/layout/country_list_item.xml
+++ b/Telstraassignment/app/src/main/res/layout/country_list_item.xml
@@ -41,6 +41,7 @@
             android:contentDescription="@string/content_description"
             android:scaleType="centerCrop"
             android:src="@mipmap/ic_launcher"
+            android:layout_marginBottom="@dimen/sp_15"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:layout_below="@+id/txt_title"
