added test cases and resolved warnings

--- a/Telstraassignment/app/src/main/res/layout/fragment_country_details.xml
+++ b/Telstraassignment/app/src/main/res/layout/fragment_country_details.xml
@@ -24,6 +24,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:maxLines="2"
+            android:layout_marginStart="@dimen/sp_15"
+            android:layout_marginLeft="@dimen/sp_15"
             android:layout_marginTop="@dimen/sp_15"
             android:textColor="@color/country_description_color"
             android:textSize="@dimen/sp_15" />
