--- a/Telstraassignment/app/src/main/res/layout/fragment_country_details.xml
+++ b/Telstraassignment/app/src/main/res/layout/fragment_country_details.xml
@@ -16,17 +16,17 @@
 
         <include
             android:id="@+id/toolbar_layout"
-            layout="@layout/tool_bar"/>
+            layout="@layout/tool_bar" />
 
         <TextView
             android:id="@+id/txt_no_internet_connection"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:maxLines="2"
             android:layout_marginStart="@dimen/sp_15"
             android:layout_marginLeft="@dimen/sp_15"
             android:layout_marginTop="@dimen/sp_15"
+            android:maxLines="2"
             android:textColor="@color/country_description_color"
             android:textSize="@dimen/sp_15" />
 
@@ -35,9 +35,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="@dimen/sp_10"
-            android:visibility="gone"
             android:clipToPadding="false"
-            android:contentDescription="@string/content_description" />
+            android:contentDescription="@string/content_description"
+            android:visibility="gone" />
 
     </LinearLayout>
 </layout>
