--- a/Telstraassignment/app/src/main/res/layout/tool_bar.xml
+++ b/Telstraassignment/app/src/main/res/layout/tool_bar.xml
@@ -10,8 +10,8 @@
 
     </data>
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/tool_bar"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar_fragment"
         android:layout_width="match_parent"
         android:layout_height="@dimen/abc_action_bar_default_height_material"
         android:background="@android:color/holo_green_light"
@@ -46,7 +46,7 @@
                 android:visibility="gone" />
         </LinearLayout>
 
-    </androidx.appcompat.widget.Toolbar>
+    </android.support.v7.widget.Toolbar>
 
 
 </layout>
